<?xml version="1.0"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Vista de estadísticas -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="33dp">

            <!-- Contenedor de estadísticas -->
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical">

                <!-- Título de estadísticas -->
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/estadistica"
                    android:textAppearance="@style/estadistica"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Menú de estadísticas -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="33dp"
            android:layout_marginHorizontal="24.5dp"
            android:orientation="vertical">

            <!-- Título de menú de estadísticas -->
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal|top"
                android:text="@string/menu_estadisticas_tres"
                android:textAppearance="@style/menu_estadisticas_tres"/>

            <!-- Opciones del menú -->
            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <!-- Opción: Historial -->
                <LinearLayout
                    android:id="@+id/layout_historial"
                    android:layout_width="80dp"
                    android:layout_height="81dp"
                    android:layout_marginHorizontal="13dp"
                    android:background="@drawable/opciones_menu_estadisticas_tres"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:onClick="onHistorialClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/descripcion_img_historial"
                        android:src="@drawable/reloj" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="17dp"
                        android:layout_marginTop="2dp"
                        android:gravity="top"
                        android:text="@string/historial"
                        android:textAppearance="@style/text_menu_estadisticas_tres" />
                </LinearLayout>

                <!-- Opción: Porcentajes -->
                <LinearLayout
                    android:id="@+id/layout_porcentajes"
                    android:layout_width="80dp"
                    android:layout_height="81dp"
                    android:layout_marginHorizontal="13dp"
                    android:background="@drawable/opciones_menu_estadisticas_tres"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:onClick="onPorcentajesClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/descripcion_img_porcentajes"
                        android:src="@drawable/porcentajes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="6dp"
                        android:layout_marginTop="2dp"
                        android:gravity="top"
                        android:text="@string/porcentajes"
                        android:textAppearance="@style/text_menu_estadisticas_tres" />
                </LinearLayout>

                <!-- Opción: Ganancias -->
                <LinearLayout
                    android:id="@+id/layout_ganancias"
                    android:layout_width="80dp"
                    android:layout_height="81dp"
                    android:layout_marginHorizontal="13dp"
                    android:background="@drawable/menu_seleccionado_estadisticas"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:onClick="onGananciasClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/descripcion_img_ganancias"
                        android:src="@drawable/ganancias" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="2dp"
                        android:gravity="top"
                        android:text="@string/ganancias"
                        android:textAppearance="@style/text_menu_estadisticas_tres" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Vista de total de estadísticas -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="27dp"
            android:layout_marginHorizontal="19dp"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:orientation="vertical">

            <!-- Título de ganancias en estadísticas -->
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="@string/ganancias_estadisticas"
                android:textAppearance="@style/ganancias_estadisticas"/>

            <!-- Total de ganancias -->
            <LinearLayout android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/total_estadisticas_tres"
                android:orientation="horizontal">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/total_ganancias_estadisticas_tres"
                    android:textAppearance="@style/total_ganancias_estadisticas_tres"/>
            </LinearLayout>

            <!-- Texto "El Planeta" -->
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/el_planeta"
                android:textAppearance="@style/el_planeta"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Icono "Archivo" -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:layout_marginStart="270dp"
        android:contentDescription="@string/descripcion_img_estadisticas"
        android:src="@drawable/ffile"/>

    <!-- Icono "Billetera" -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="425dp"
        android:layout_marginStart="270dp"
        android:contentDescription="@string/descripcion_img_total_ganancias"
        android:src="@drawable/money_wallet"/>

</RelativeLayout>
